# platformer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  README.md  events.txt  multiMediaConcept.txt  networkingPlan.txt  vcpkg.json
builds/x86-64_Linux/: platformer.sh  platformer.tar.Z
cmake/: FindSDL_image.cmake  FindSDL_mixer.cmake  FindSDL_ttf.cmake
include/: Estd.h  errors.h  multiLib.h  networking.h
include/multiLib/: audio.h  errors.h  events.h  misc.h  visuals.h
src/: Estd.cpp  main.cpp  multiLib.cpp  networking.cpp
src/core/: errors.h  log.cpp  log.h
src/multiLib/: audio.cpp  errors.cpp  events.cpp  misc.cpp  visuals.cpp
